--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "app",
   "version": "1.0.0",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "express-logging": "^1.1.1",
+    "logops": "^2.1.0"
   }
 }
