Настроил отдачу картинок в nginx

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -1,6 +1,6 @@
 
 user  nginx;
-worker_processes  1;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -12,25 +12,27 @@ events {
 
 http {
 
-    # Сам proxy
+    # Сам proxy, слушает на стандартном 80 порту
     server {
         # При обращении к корню
         location / {
-            proxy_pass http://localhost:1234;   # Указываем проксируемый сервер
-            # root /home/igor/data/www;           # Файл с html
+            # proxy_pass http://localhost:8080;   # Указываем проксируемый сервер
         }
 
-        location ~ \.(gif|jpg|png)$ {           # Для любых запросов картинок
-            root /home/igor/data/images;
+        # STATIC
+        location /hack {
+            # Здесь именно alias, потому что если использовать root
+            # Подразумевается, что будет каталог hack, что неправда
+            alias /home/igor/Web/project/static/html;
         }
-    }
 
-    # Проксируемый сервер
-    server {
-        listen 1234;                # Указываем порт, на котором будем слушать
-        root /home/igor/data/up1;   # Указываем общий root, на который будут ссылаться location по умолчанию
+        location /index {
+            root /home/igor/Web/project/static/html;
+            index hack.txt;
+        }
 
-        location / {                # Здесь уже указывать root не обязательно, хотя вроде как разницы нет
+        location /img { # Хрен знает, но для HTML должно работать
+            root /home/igor/Web/project/static;
         }
     }
 }
