Настроил Cache и gzip

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -11,12 +11,24 @@ events {
 }
 
 http {
+    proxy_cache_path /home/igor/Web/cache levels=1:2 keys_zone=all:32m max_size=1g;
 
-    # Сам proxy, слушает на стандартном 80 порту
+    # Сам proxy, слушает на 81 порту. Раздаёт статику
     server {
+        # Включаем сжатие
+        gzip on;
+        # Уровень сжатия
+        gzip_comp_level 5;
+        # Что-то очень важное
+        # Видимо это отказ в кешировании Microsoft IE
+        gzip_disable "msie6";
+        # Определяем, что кешировать
+        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
         # При обращении к корню
         location / {
-            # proxy_pass http://localhost:8080;   # Указываем проксируемый сервер
+            proxy_pass http://localhost:8080;   # Указываем проксируемый сервер
+            proxy_cache             all;                    # Каждый запрос
+            proxy_cache_valid       any 1h;                 # Хранится 1h
         }
 
         # STATIC
@@ -27,11 +39,11 @@ http {
         }
 
         location /index {
-            root /home/igor/Web/project/static/html;
+            alias /home/igor/Web/project/static/html;
             index hack.txt;
         }
 
-        location /img { # Хрен знает, но для HTML должно работать
+        location /img { # для HTML должно работать
             root /home/igor/Web/project/static;
         }
     }
