Настроил балансировку между двумя запущенными серверами (8080, 9090)

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -13,6 +13,13 @@ events {
 http {
     proxy_cache_path /home/igor/Web/cache levels=1:2 keys_zone=all:32m max_size=1g;
 
+    upstream backend {
+        server localhost:8080   weight=1;   # Все конечно круто, но нужно постоянно очищать КЭШ,
+        server localhost:9090   weight=3;   # чтобы понять как это работает
+    }
+
+    add_header 'Referrer-Policy' 'origin';
+
     # Сам proxy, слушает на 81 порту. Раздаёт статику
     server {
         # Включаем сжатие
@@ -26,7 +33,7 @@ http {
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
         # При обращении к корню
         location / {
-            proxy_pass http://localhost:8080;   # Указываем проксируемый сервер
+            proxy_pass http://backend;                      # Указываем проксируемый блок. В нем работает 2 сервера
             proxy_cache             all;                    # Каждый запрос
             proxy_cache_valid       any 1h;                 # Хранится 1h
         }
@@ -45,6 +52,11 @@ http {
 
         location /img { # для HTML должно работать
             root /home/igor/Web/project/static;
+        }
+
+        # status
+        location = /status {
+            stub_status;
         }
     }
 }
