Сделал два сервиса. Ссылки, все работает.

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -54,9 +54,56 @@ http {
             root /home/igor/Web/project/static;
         }
 
+        location /temp {
+            root /home/igor/Web/project;
+        }
+
+        # ПЕРЕНАПРАВЛЕНИЯ
+        # Жесть, но почему-то работет только если поставить "/" в конце
+        location /service1/ {
+            proxy_pass http://localhost:8001/;
+            proxy_cache             all;                    # Каждый запрос
+            proxy_cache_valid       any 1h;                 # Хранится 1h
+        }
+
+        location /service2/ {
+            proxy_pass http://localhost:8002/;
+            proxy_cache             all;                    # Каждый запрос
+            proxy_cache_valid       any 1h;                 # Хранится 1h
+        }
+
         # status
         location = /status {
             stub_status;
+        }
+    }
+
+
+    # SERVICE 1
+    server {
+        listen 8001;
+
+        location / {
+            root /home/igor/Web/project/server1;
+        }
+
+        # Ссылка на общую страничку для Сервиса1/2
+        location /temp {
+            root /home/igor/Web/project;
+        }
+    }
+
+    # SERVICE 2
+    server {
+        listen 8002;
+
+        location / {
+            root /home/igor/Web/project/server2;
+        }
+
+        # Ссылка на общую страничку для Сервиса1/2
+        location /temp {
+            root /home/igor/Web/project;
         }
     }
 }
