--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -20,8 +20,23 @@ http {
 
     add_header 'Referrer-Policy' 'origin';
 
-    # Сам proxy, слушает на 81 порту. Раздаёт статику
+    # Точка входа http-запросов. Просто перенаправляет на ssl (https)
     server {
+	listen 80 default_server;
+	listen [::]:80 default_server;
+	server_name localhost;
+	return 302 https://$server_name$request_uri;
+    }
+
+    # Точка вход https-запросов
+    # Основной proxy-сервер. Сжимает, кеширует запросы.
+    # Раздаёт статику и перенаправляет запросы на другие сервера
+    server {
+        listen 443 ssl http2 default_server;
+        listen [::]:443 ssl http2 default_server;
+        include snippets/self-signed.conf;
+        include snippets/ssl-params.conf;
+
         # Включаем сжатие
         gzip on;
         # Уровень сжатия
