Настроил https. Шифрование.

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -30,7 +30,7 @@ http {
 
     # Точка вход https-запросов
     # Основной proxy-сервер. Сжимает, кеширует запросы.
-    # Раздаёт статику и перенаправляет запросы на другие сервера
+    # Раздаёт статику и перенаправляет запросы на другие сервераани
     server {
         listen 443 ssl http2 default_server;
         listen [::]:443 ssl http2 default_server;
