Настроил nginx скрывать заголовки

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -18,9 +18,9 @@ http {
         server localhost:9090   weight=3;   # чтобы понять как это работает
     }
 
-    add_header 'Referrer-Policy' 'origin';
 
-    # Точка входа http-запросов. Просто перенаправляет на ssl (https)
+    # Сам proxy, слушает на 80 порту. Раздаёт статику
+    # Сжимает данные, куширует их
     server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
@@ -28,14 +28,13 @@ http {
 	return 302 https://$server_name$request_uri;
     }
 
-    # Точка вход https-запросов
-    # Основной proxy-сервер. Сжимает, кеширует запросы.
-    # Раздаёт статику и перенаправляет запросы на другие сервераани
     server {
         listen 443 ssl http2 default_server;
         listen [::]:443 ssl http2 default_server;
         include snippets/self-signed.conf;
         include snippets/ssl-params.conf;
+
+
 
         # Включаем сжатие
         gzip on;
@@ -48,9 +47,11 @@ http {
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
         # При обращении к корню
         location / {
-            proxy_pass http://backend;                      # Указываем проксируемый блок. В нем работает 2 сервера
+            proxy_pass https://backend;                     # Указываем проксируемый блок. В нем работает 2 сервера
+            proxy_hide_header X-Powered-By;                 # Скрываем информацию о том, что это ExpressJS
             proxy_cache             all;                    # Каждый запрос
             proxy_cache_valid       any 1h;                 # Хранится 1h
+            add_header x-powered-by "";
         }
 
         # STATIC
@@ -58,19 +59,44 @@ http {
             # Здесь именно alias, потому что если использовать root
             # Подразумевается, что будет каталог hack, что неправда
             alias /home/igor/Web/project/static/html;
+            http2_push /img/images.jpeg;
+	        http2_push /img/linux-mint-1.jpg;
+            http2_push /img/linux-mint-2.jpg;
+
+            # Обработка заголовков
+            add_header etag "";
+            add_header x-frame-options "";
+            add_header last-modified "";
         }
+
 
         location /index {
             alias /home/igor/Web/project/static/html;
+            add_header Content-Type text/html;
             index hack.txt;
+
+            # Обработка заголовков
+            add_header etag "";
+            add_header x-frame-options "";
+            add_header last-modified "";
         }
 
         location /img { # для HTML должно работать
-            root /home/igor/Web/project/static;
+           root /home/igor/Web/project/static;
+
+           # Обработка заголовков
+           add_header etag "";
+           add_header x-frame-options "";
+           add_header last-modified "";
         }
 
         location /temp {
             root /home/igor/Web/project;
+
+            # Обработка заголовков
+            add_header etag "";
+            add_header x-frame-options "";
+            add_header last-modified "";
         }
 
         # ПЕРЕНАПРАВЛЕНИЯ
@@ -79,17 +105,32 @@ http {
             proxy_pass http://localhost:8001/;
             proxy_cache             all;                    # Каждый запрос
             proxy_cache_valid       any 1h;                 # Хранится 1h
+
+            # Обработка заголовков
+            add_header etag "";
+            add_header x-frame-options "";
+            add_header last-modified "";
         }
 
         location /service2/ {
             proxy_pass http://localhost:8002/;
             proxy_cache             all;                    # Каждый запрос
             proxy_cache_valid       any 1h;                 # Хранится 1h
+
+            # Обработка заголовков
+            add_header etag "";
+            add_header x-frame-options "";
+            add_header last-modified "";
         }
 
         # status
         location = /status {
             stub_status;
+
+            # Обработка заголовков
+            add_header etag "";
+            add_header x-frame-options "";
+            add_header last-modified "";
         }
     }
 
